# nomi

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run.py
.github/workflows/: publish.yml  tests.yml
cli/: __init__.py  main.py
cli/commands/: __init__.py  context.py  init.py  mcp.py  search.py  start.py  status.py  stop.py
docs/: architecture.txt  documentation.txt  folder_architecutre.txt  indexing-debugging.md  research.txt  viral_structure.txt
nomi/: __init__.py
nomi/api/: __init__.py  server.py
nomi/api/routes/: __init__.py  context.py  repo.py  symbol.py
nomi/api/schemas/: __init__.py  context_schema.py  symbol_schema.py
nomi/config/: __init__.py  loader.py  schema.py
nomi/core/: __init__.py
nomi/core/compression/: __init__.py  pruner.py  skeletonizer.py  token_budget.py
nomi/core/context/: __init__.py  context_builder.py  context_bundle.py  resolver.py
nomi/core/graph/: __init__.py  dependency_graph.py  edge_builder.py  traversal.py
nomi/core/index/: __init__.py  lookup.py  search.py  symbol_index.py
nomi/core/parser/: __init__.py  ast_extractor.py  engine.py  node_mapper.py
nomi/core/parser/queries/: go.scm  python.scm  typescript.scm
nomi/daemon/: __init__.py
nomi/daemon/lifecycle/: __init__.py  healthcheck.py  signals.py
nomi/daemon/runtime/: __init__.py  daemon.py
nomi/daemon/scheduler/: __init__.py  indexing.py  maintenance.py
nomi/discovery/: __init__.py  language_detector.py  repo_scanner.py
nomi/languages/: __init__.py
nomi/mcp/: __init__.py  server.py
nomi/mcp/handlers/: __init__.py  executor.py  tool_router.py
nomi/mcp/schemas/: __init__.py  request_schema.py  response_schema.py
nomi/mcp/tools/: __init__.py  build_context.py  context_builder.py  dependency_expand.py  repo_map.py  symbol_lookup.py
nomi/repo_map/: __init__.py  map_builder.py  module_graph.py
nomi/storage/: __init__.py  exceptions.py  models.py
nomi/storage/cache/: __init__.py  context_cache.py  memory_cache.py
nomi/storage/sqlite/: __init__.py  graph_store.py  schema.py  symbol_store.py
nomi/utils/: __init__.py  logger.py  paths.py
nomi/watcher/: __init__.py  batch_processor.py  change_handler.py  file_watcher.py  indexing_coordinator.py
tests/: __init__.py  test_integration.py  test_repo_map.py
